fix width flow on mobile screen

--- a/components/Home/TreatmentCategory/index.module.scss
+++ b/components/Home/TreatmentCategory/index.module.scss
@@ -177,8 +177,8 @@ section#treatment_category {
       margin-right: 37px;
 
       @media screen and (max-width: 992px) {
-        margin-right: -18px;
-        margin-top: -7px;
+        margin-right: -7px;
+        margin-top: -11px;
       }
 
       button {
@@ -189,9 +189,6 @@ section#treatment_category {
         font-weight: var(--font-medium);
         font-family: var(--quickstand-font);
         text-decoration: underline;
-        margin-right: -30px;
-        margin-top: 16px;
-
         @media screen and (max-width: 992px) {
           font-size: 14px;
           font-weight: var(--font-medium);
